fix content overflow in the features section

--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -3,8 +3,12 @@
 	grid-column: center-start / center-end;
 	grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
 	align-items: start;
-	grid-gap: 6rem;
+	gap: 6rem;
 	margin: 15rem 0;
+
+	@media only screen and (max-width: $bp-medium) {
+		grid-row: 4 / 6;
+	}
 }
 
 .feature {
