--- a/src/scss/_story.scss
+++ b/src/scss/_story.scss
@@ -64,7 +64,6 @@
 
 		@media only screen and (max-width: $bp-medium) {
 			grid-column: 1 / -1;
-			grid-row: 5 / 6;
 		}
 	}
 
